cmake_minimum_required(VERSION 2.8)
project(sycl_bug)

set(CMAKE_PREFIX_PATH ${HPX_LOCATION} ${CMAKE_PREFIX_PATH})
find_package(HPX REQUIRED)
#get_target_property(COMPILE_OPTIONS hpx INTERFACE_COMPILE_OPTIONS)
#get_target_property(COMPILE_DEFINITIOMS hpx INTERFACE_COMPILE_DEFINITIONS)
#message("${INTERFACE_COMPILE_DEFINITIONS}")
#message("${INTERFACE_COMPILE_OPTIONS}")
#message("${HPX_INCLUDE_DIRS}")
#message("${HPX_LIBRARIES}")
include_directories(${HPX_INCLUDE_DIRS})


set(CMAKE_MODULE_PATH ${COMPUTECPP_LOCATION}/cmake/Modules/ ${CMAKE_MODULE_PATH})
include(/opt/ComputeCpp-15.10-Linux/cmake/common.cmake)
set(DEVICE_COMPILER_PATH "/opt/ComputeCpp-15.10-Linux/bin/")
set(DEVICE_COMPILER_INCLUDE_PATH "/opt/ComputeCpp-15.10-Linux/include/device_compiler")
set(DEVICE_COMPILER_NAME "compute++")
add_custom_target(compiler)
set(DEVICE_COMPILER_NAME "compute++")
set(DEVICE_COMPILER "${DEVICE_COMPILER_PATH}/${DEVICE_COMPILER_NAME}" CACHE FILEPATH "device compiler")
set(RUNTIME_INCLUDES "/opt/ComputeCpp-15.10-Linux/include")
include_directories(${RUNTIME_INCLUDES})

add_custom_target(${SYCL_LIB_NAME})
set(SYCL_LIB_PATH "/opt/ComputeCpp-15.10-Linux/sample_code/../lib/${SYCL_LIB_FILE}")
#set(SYCL_LIB_PATH "/opt/ComputeCpp-15.10-Linux/sample_code/../lib/libSYCL.so")
build_sycl("executor_test" "SPIR" "executor_test" ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

hpx_setup_target(executor_test)
