cmake_minimum_required(VERSION 2.8)
project(sycl_bug)

set(CMAKE_PREFIX_PATH ${HPX_LOCATION} ${CMAKE_PREFIX_PATH})
find_package(HPX REQUIRED)
#get_target_property(COMPILE_OPTIONS hpx INTERFACE_COMPILE_OPTIONS)
#get_target_property(COMPILE_DEFINITIOMS hpx INTERFACE_COMPILE_DEFINITIONS)
#message("${INTERFACE_COMPILE_DEFINITIONS}")
#message("${INTERFACE_COMPILE_OPTIONS}")
#message("${HPX_INCLUDE_DIRS}")
#message("${HPX_LIBRARIES}")
include_directories(${HPX_INCLUDE_DIRS})


set(CMAKE_MODULE_PATH ${COMPUTECPP_LOCATION}/cmake/Modules/ ${CMAKE_MODULE_PATH})
include(${COMPUTECPP_LOCATION}/cmake/common.cmake)
set(DEVICE_COMPILER_PATH "${COMPUTECPP_LOCATION}/bin/")
set(DEVICE_COMPILER_INCLUDE_PATH "${COMPUTECPP_LOCATION}/include/device_compiler")
set(DEVICE_COMPILER_NAME "compute++")
add_custom_target(compiler)
set(DEVICE_COMPILER "${DEVICE_COMPILER_PATH}/${DEVICE_COMPILER_NAME}" CACHE FILEPATH "device compiler")
set(RUNTIME_INCLUDES "${COMPUTECPP_LOCATION}/include")
include_directories(${RUNTIME_INCLUDES})

#add_custom_target(${SYCL_LIB_NAME})
set(SYCL_LIB_PATH "${COMPUTECPP_LOCATION}/lib/${SYCL_LIB_FILE}")

build_sycl("executor_test" "SPIR" "executor_test" ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
build_sycl("executor_test_no_hpx" "SPIR" "executor_test_no_hpx" ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
hpx_setup_target(executor_test)
hpx_setup_target(executor_test_no_hpx)
